--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
   <head>
-    <title>Hello world webpage</title>
+    <title>SEK 4th ESO class</title>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <h2>Una prueba para ver cambios</h2>
+    <h1>Programming</h1>
     <p>If this works as it should, you will be able to read this from any device in the world!</p>
   </body>
 </html>
