--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Hello world</h1>
-    <h2>Una prueba para ver cambios</h2>
+    <h2>Otra prueba para ver cambios</h2>
     <p>If this works as it should, you will be able to read this from any device in the world!</p>
   </body>
 </html>
